# ML-Flow-integration-prediction-accidents

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
notebooks/: mlflow.ipynb  mlflow_clean.ipynb
notebooks/tmp_artifacts/: feature_names.txt
